--- a/Source/CorreccionTesis/capitulo2.tex
+++ b/Source/CorreccionTesis/capitulo2.tex
@@ -52,7 +52,7 @@ Se han presentado varias distribuciones para modelar este tipo de imágenes. Las
 \citet{Li2011} propusieron una distribución Gamma generalizada para modelar imágenes SAR; esa distribución tiene las leyes Weibull, \textit{K} y Fisher, entre otras, como casos particulares. 
 Cabe señalar que la distribución $\mathcal{G}^0$ está relacionada con la distribución de Fisher, como muestran \citet{MejailJacoboFreryBustos:IJRS}.
 
-En \citet{oliverquegan98} proponen modelar datos provenientes de un sistema de iluminación por radiación coherente, como son los datos SAR, con un modelo multiplicativo que considera que el valor observado en cada celda de la imagen es una variable aleatoria $Z$ que resulta del producto de dos variables aleatorias independientes: una correspondiente a la retrodispersión $X$ (que es lo que observaríamos sin la presencia del ruido speckle) y la otra correspondiente al ruido speckle $Y$ (que es inherente a todo sistema de captura de imágenes con iluminación coherente). 
+\citet{oliverquegan98} proponen modelar datos provenientes de un sistema de iluminación por radiación coherente, como son los datos SAR, con un modelo multiplicativo que considera que el valor observado en cada celda de la imagen es una variable aleatoria $Z$ que resulta del producto de dos variables aleatorias independientes: una correspondiente a la retrodispersión $X$ (que es lo que observaríamos sin la presencia del ruido speckle) y la otra correspondiente al ruido speckle $Y$ (que es inherente a todo sistema de captura de imágenes con iluminación coherente). 
 
 En los últimos años, se ha utilizado exitosamente el modelo $\mathcal{G}^0$: $\mathcal{G}_A^0$ para datos de amplitud y $\mathcal G_I^0$ para datos de intensidad, porque tiene la capacidad de discriminar áreas muy texturadas o extremadamente texturadas mejor que otros modelos. Este modelo fue propuesto por \citet{Frery97} y está caracterizado por tres parámetros; el parámetro $\alpha$ que explica la textura, el parámetro $\gamma $ que informa sobre el brillo de la imagen y el número de looks $L$ que está relacionado con la relación señal-ruido.
 Debido a esta interpretabilidad, es crucial obtener estimaciones de calidad de dichos parámetros, en particular para $\alpha$.
@@ -85,8 +85,8 @@ El autor mostró que estos estimadores son consistentes y asintóticamente efici
 %combining MDEs with stochastic distances. Ellos prponen minimizar la distancia triangular entre la función de densidad teórica y una estimación no paramétrica de la función de densidad subyacente utilizando núcleos asimétricos, en este caso, utilizaron el kernel gaussiano inverso. Los autores compararon el desempeño del estimador propueston con el obtenido por logcumulación y Máxima Verosimilitud, y obtuvieron buenos resultados
 %en términos de error cuadrático medio, sesgo, consistencia y robustez. 
 
-Dentro de los estimadores no paramétricos de la función de densidad subyacente se encuentran los estimadores de kernel clásico, con kernel simétrico que son populares en la estimación de la función de densidad. En \citet{Silverman1986} es una clásica referencia para este tipo de estimadores.
-Sin embargo, si la función de densidad a estimar tiene soporte acotado o semiacotado, estos estimadores pueden dar estimaciones sesgadas en los bordes porque asignan probabilidad positiva fuera del soporte de la función. Una alternativa para mejorar esto es utilizar kernels asimétricos, \citet{chen1999, chensx2000} presenta núcleos Beta y Gamma, \citet {Scaillet2004} introduce núcleos Inverso Gaussianos (IG) y Recíproco Inverso Gaussiano (RIG), \citet {bouezmarni2005} demuestran propiedades teóricas de los núcleos Gamma, IG y RIG. En \citet{Jin2003} los autores proponen los núcleos Birnbaum-Saunders (BS) y Lognormal (LN). Es interesante señalar que  estos estimadores varían su forma de acuerdo con la observación, una característica que permite obtener diferentes grados de suavizamiento sin incurrir en los problemas antes mencionados \citet{Scaillet2004}. 
+Dentro de los estimadores no paramétricos de la función de densidad subyacente se encuentran los estimadores de kernel clásico, con kernel simétrico que son populares en la estimación de la función de densidad.  \citet{Silverman1986} es una clásica referencia para este tipo de estimadores.
+Sin embargo, si la función de densidad a estimar tiene soporte acotado o semiacotado, estos estimadores pueden dar estimaciones sesgadas en los bordes porque asignan probabilidad positiva fuera del soporte de la función. Una alternativa para mejorar esto es utilizar núcleos asimétricos, \citet{chen1999, chensx2000} presenta los núcleos Beta y Gamma, \citet {Scaillet2004} introduce los núcleos Inverso Gaussianos (IG) y Recíproco Inverso Gaussiano (RIG), \citet {bouezmarni2005} demuestran propiedades teóricas de los núcleos Gamma, IG y RIG, \citet{Jin2003}  proponen los núcleos Birnbaum-Saunders (BS) y Lognormal (LN). Es interesante señalar que  estos estimadores varían su forma de acuerdo con la observación, una característica que permite obtener diferentes grados de suavizamiento sin incurrir en los problemas antes mencionados \citet{Scaillet2004}. 
 
 En esta tesis se propone un nuevo  estimador de los parámetros de la distribución $\mathcal{G}_I^0$ definido como el punto del espacio paramétrico que minimiza la distancia estocástica que existe entre la función de densidad teórica $\mathcal{G}_I^0$ y una estimación no paramétrica de la función de densidad subyacente utilizando núcleos asimétricos. Se muestra que la distancia triangular es una buena elección para tratar este problema y se prueba la convergencia fuerte de este estimador. Asimismo, a través de simulaciones Monte Carlo, se analiza:
 \begin{itemize}
