Terminado de revisar

--- a/Source/CorreccionTesis/capitulo4.tex
+++ b/Source/CorreccionTesis/capitulo4.tex
@@ -240,7 +240,7 @@ De acuerdo a lo visto en las secciones~\ref{ModeloSpeckle} y~\ref{ModeloBackscat
 \begin{equation*}
 Z=X \cdot Y  
 \end{equation*}
-donde $X$ e $Y$ son variables aleatorias que corresponden a la retrodispersión y al ruido speckle, respectivamente. 
+donde $X$ e $Y$ son variables aleatorias independientes que corresponden a la retrodispersión y al ruido speckle, respectivamente. 
 
  \citet{Frery99} proponen que $X \sim N^{-1}(\alpha,\lambda,\gamma )$, $Y \sim \Gamma(L,L)$, entonces $Z$ obedece una distribución $\mathcal G_I(\alpha,\lambda,\gamma,L )$, que es el modelo $\mathcal{G}$ para datos de intensidad. \citet{Frery97} presentan el modelo $\mathcal{G}$ para datos de amplitud a partir de un análisis similar.
 
