Hasta el 3 inclusive

--- a/Bibliography/bib_julia.bib
+++ b/Bibliography/bib_julia.bib
@@ -5354,7 +5354,7 @@ booktitle = {Applied optics}
 
 @article{Freitas2005,
 author = {Freitas, C. and Frery, A. C. and Correia, A.},
-title = {The polarimetric $\mathcal{G}$ distribution for SAR data analysis},
+title = {The polarimetric $\mathcal{G}$ distribution for {SAR} data analysis},
 journal = {Environmetrics},
 year={2005},
 volume = {16},
@@ -5966,7 +5966,7 @@ doi = {10.1109/IGARSS.2017.8127630}
 @Misc{FreryLibro2019,
 	author       = {A. C. Frery and J. Wu},
 	title        = {Operational Statistics for {SAR} Imagery},
-	year={2019},
+	year={2020},
 	url = {https://github.com/acfrery/Statistics-SAR-Intensity.git},
 }
 
