--- a/Source/CorreccionTesis/tesis.tex
+++ b/Source/CorreccionTesis/tesis.tex
@@ -48,7 +48,7 @@
 \usepackage{float}
 %\usepackage{dcolumn}
 
-%\usepackage{natbib}
+\usepackage{rotating}
 
 \usepackage{tikz}
 \usetikzlibrary{shapes,snakes,arrows,trees}
