--- a/Source/CorreccionTesis/capitulo2.tex
+++ b/Source/CorreccionTesis/capitulo2.tex
@@ -58,9 +58,9 @@ En los últimos años, se ha utilizado exitosamente el modelo $\mathcal{G}^0$: $
 Debido a esta interpretabilidad, es crucial obtener estimaciones de calidad de dichos parámetros, en particular para $\alpha$.
 
 Varios autores han estudiado el problema de la estimación de parámetros para la familia $\mathcal G^0$. \citet{Freitas2005} usaron el primer y segundo momento para estimar los parámetros de textura y escala en el caso de datos de intensidad.
- \citet{VasconcellosFrerySilva:CompStat} cuantifican el error en la estimación del parámetro de textura para la distribución $\mathcal G_A^0$ y proponen una técnica analítica para mejorar la estimación a través de una corrección de segundo orden en el sesgo de la estimación del parámetro de textura. \citet{Li2011} obtuvieron una expresión para los estimadores de la distribución Gamma generalizada basada en cumulants de segundo tipo y una aproximación de segundo orden de la función Polygamma. \citet{CribariFrerySilva:CSDA} implementaron técnicas de remuestreo para mejorar la estimación de parámetros para el modelo $\mathcal G_I^0$.
+ \citet{VasconcellosFrerySilva:CompStat} cuantifican el error en la estimación del parámetro de textura para la distribución $\mathcal G_A^0$ y proponen una técnica analítica para mejorar la estimación a través de una corrección de segundo orden en el sesgo de la estimación del parámetro de textura. \citet{Li2011} obtuvieron una expresión para los estimadores de la distribución Gamma generalizada basada en cumulantes de segundo tipo y una aproximación de segundo orden de la función Polygamma. \citet{CribariFrerySilva:CSDA} implementaron técnicas de remuestreo para mejorar la estimación de parámetros para el modelo $\mathcal G_I^0$.
 
- \citet{nicolas2002} propusieron el método basado en Logmomentos y Logcumulantes para estimar los parámetros de una distribución. Estos métodos dependen de la relación entre los momentos de la distribución y su transformada de Mellin. La misma idea fue aplicada por \citet{khan2014} para estimar los parámetros del modelo $\mathcal{G}$ multivariado en el caso de datos SAR polarimétricos y también fue utilizada por \citet{Tison2004} para la estimación del modelo $\mathcal{G}$ para datos de amplitud.
+ \citet{nicolas2002} propusieron el método basado en Logmomentos y Logcumulantes para estimar los parámetros de una distribución. Estos métodos dependen de la relación entre los momentos de la distribución y su transformada de Mellin. La misma idea fue aplicada por \citet{khan2014} para estimar los parámetros del modelo $\mathcal{G}^0$ multivariado en el caso de datos SAR polarimétricos y también fue utilizada por \citet{Tison2004} para la estimación del modelo $\mathcal{G}^0_A$.
 
 Unas de las propiedades deseables para un estimador es su robustez, esto es, su capacidad para dar buenas estimaciones aún en presencia de datos atípicos. \citet{BustosFreryLucini:Mestimators:2001} y \citet{AllendeFreryetal:JSCS:05} propusieron M y AM estimadores para mejorar el comportamiento del estimador de Máxima Verosimilitud bajo contaminación. Ellos mostraron que su propuesta, si bien supera la performance del estimador de Máxima Verosimilitud, presenta problemas numéricos especialmente para el caso de muestras de pequeño tamaño.
 
@@ -69,11 +69,14 @@ Estas divergencias fueron ampliamente estudiadas por \citet{KullbackLeibler1951}
 
 %El concepto de divergencias como distancias estocásticas se describe detalladamente en \citet{Liese2006}, así como también sus propiedades.  
 % Mejorar las referencia en eventos con artigos en periódicos
-Este tipo de divergencias poseen múltiples aplicaciones en procesamiento de señales e imágenes. \citet{Aviyente2007} utilizan medidas de divergencia para cuantificar la interacción entre diferentes sitios neuronales, \citet{5599869} aplican estas medidas en el análisis de imágenes médicas.
-\citet{1246862} las utilizan en clasificación de texturas, \citet{6377288} y \citet{ClassificationPolSARSegmentsMinimizationWishartDistances} en detección automática de regiones con diferente grado de rugosidad en imágenes SAR.
+Este tipo de divergencias posee múltiples aplicaciones en procesamiento de señales e imágenes. 
+\citet{Aviyente2007} utilizan medidas de divergencia para cuantificar la interacción entre diferentes sitios neuronales.
+\citet{5599869} aplican estas medidas en el análisis de imágenes médicas.
+\citet{1246862} las utilizan en clasificación de texturas, mientras que
+\citet{6377288} y \citet{ClassificationPolSARSegmentsMinimizationWishartDistances} en detección automática de regiones con diferente grado de rugosidad en imágenes SAR.
 
 
-Los estimadores de mínima distancia (MDE) son una  alternativa con buenas propiedades para el problema de la estimación de parámetros.
+Los estimadores de mínima distancia (\textit{Minimum Distance Estimators } -- MDE) son una  alternativa con buenas propiedades para el problema de la estimación de parámetros.
 Surgen de la idea de encontrar un estimador que sea el valor que minimiza la medida de la distancia entre las funciones de distribución empírica y teórica.
 \citet{wolfowitz1953, wolfowitz1957} estudió esta clase de estimadores y demostró que, bajo condiciones generales, estos estimadores son fuertemente consistentes. 
 \citet{Boos1981} estudió la distancia ponderada de Cramer-von Mises entre la función de distribución empírica y el modelo verdadero.
@@ -85,10 +88,12 @@ El autor mostró que estos estimadores son consistentes y asintóticamente efici
 %combining MDEs with stochastic distances. Ellos prponen minimizar la distancia triangular entre la función de densidad teórica y una estimación no paramétrica de la función de densidad subyacente utilizando núcleos asimétricos, en este caso, utilizaron el kernel gaussiano inverso. Los autores compararon el desempeño del estimador propueston con el obtenido por logcumulación y Máxima Verosimilitud, y obtuvieron buenos resultados
 %en términos de error cuadrático medio, sesgo, consistencia y robustez. 
 
-Dentro de los estimadores no paramétricos de la función de densidad subyacente se encuentran los estimadores de kernel clásico, con kernel simétrico que son populares en la estimación de la función de densidad.  \citet{Silverman1986} es una clásica referencia para este tipo de estimadores.
-Sin embargo, si la función de densidad a estimar tiene soporte acotado o semiacotado, estos estimadores pueden dar estimaciones sesgadas en los bordes porque asignan probabilidad positiva fuera del soporte de la función. Una alternativa para mejorar esto es utilizar núcleos asimétricos, \citet{chen1999, chensx2000} presenta los núcleos Beta y Gamma, \citet {Scaillet2004} introduce los núcleos Inverso Gaussianos (IG) y Recíproco Inverso Gaussiano (RIG), \citet {bouezmarni2005} demuestran propiedades teóricas de los núcleos Gamma, IG y RIG, \citet{Jin2003}  proponen los núcleos Birnbaum-Saunders (BS) y Lognormal (LN). Es interesante señalar que  estos estimadores varían su forma de acuerdo con la observación, una característica que permite obtener diferentes grados de suavizamiento sin incurrir en los problemas antes mencionados \citet{Scaillet2004}. 
+Dentro de los estimadores no paramétricos de la función de densidad subyacente se encuentran los estimadores de kernel clásico, con kernel simétrico que son populares en la estimación de la función de densidad.  \citet{Silverman1986} es una referencia clásica para este tipo de estimadores.
 
-En esta tesis se propone un nuevo  estimador de los parámetros de la distribución $\mathcal{G}_I^0$ definido como el punto del espacio paramétrico que minimiza la distancia estocástica que existe entre la función de densidad teórica $\mathcal{G}_I^0$ y una estimación no paramétrica de la función de densidad subyacente utilizando núcleos asimétricos. Se muestra que la distancia triangular es una buena elección para tratar este problema y se prueba la convergencia fuerte de este estimador. Asimismo, a través de simulaciones Monte Carlo, se analiza:
+Sin embargo, si la función de densidad a estimar tiene soporte acotado o semiacotado, estos estimadores pueden dar estimaciones sesgadas en los bordes porque asignan probabilidad positiva fuera del soporte de la función. 
+Una alternativa para mejorar esto es utilizar núcleos asimétricos. \citet{chen1999, chensx2000} presentan los núcleos Beta y Gamma, \citet {Scaillet2004} introduce los núcleos Inverso Gaussianos (IG) y Recíproco Inverso Gaussiano (RIG), \citet {bouezmarni2005} demuestran propiedades teóricas de los núcleos Gamma, IG y RIG, \citet{Jin2003}  proponen los núcleos Birnbaum-Saunders (BS) y Lognormal (LN). Es interesante señalar que  estos estimadores varían su forma de acuerdo con la observación, una característica que permite obtener diferentes grados de suavizamiento sin incurrir en los problemas antes mencionados \citep{Scaillet2004}. 
+
+En esta tesis se propone un nuevo  estimador de los parámetros de la distribución $\mathcal{G}_I^0$ definido como el punto del espacio paramétrico que minimiza la distancia estocástica que existe entre la función de densidad teórica $\mathcal{G}_I^0$ y una estimación no paramétrica de la función de densidad subyacente utilizando núcleos asimétricos. Se muestra que la distancia triangular es una buena elección para tratar este problema y se prueba la convergencia fuerte de este estimador. Asimismo, a través de simulaciones Monte Carlo, se analizan:
 \begin{itemize}
 	\item El desempeño de este estimador para pequeñas muestras comparándolo, en términos de sesgo y error cuadrático medio y tasa de convergencia, con los estimadores presentes en la literatura.
 	\item La robustez del estimador propuesto bajo diferentes esquemas de contaminación.
@@ -97,7 +102,7 @@ En esta tesis se propone un nuevo  estimador de los parámetros de la distribuci
 Esta tesis está organizada de la siguiente manera:
 \begin{itemize}
 	\item En el capítulo~\ref{Radar} presentamos conceptos de teledetección y los radares de apertura sintética dando una breve reseña de principales sensores SAR. Presentamos también la generación de imágenes SAR y  la formación del ruido speckle.
-	\item En el capítulo~\ref{modeloG0} se introduce el modelo multiplicativo base de la metodología adoptada para explicar el comportamiento de las imágenes SAR. Presentamos las distribuciones de cada una de las variables que forman parte del modelo multiplicativo y, finalmente, presentamos la familia de distribuciones $\mathcal{G}_I$ objeto de estudio en esta tesis.
+	\item En el capítulo~\ref{modeloG0} se introduce el modelo multiplicativo, base de la metodología adoptada para explicar el comportamiento de las imágenes SAR. Presentamos las distribuciones de cada una de las variables que forman parte del modelo multiplicativo y, finalmente, presentamos la familia de distribuciones $\mathcal{G}_I^0$ objeto de estudio en esta tesis.
 	\item En el capítulo~\ref{metodologia}  se describen dos metodologías de estimación de la función de densidad, paramétrica y no paramétrica. Damos una descripción de cada una de estas metodologías y presentamos el principal aporte de esta tesis, que es la propuesta de un nuevo método de estimación para los parámetros del modelo $\mathcal G_I^0$.
 	\item En el capítulo~\ref{ResultadosEmpiricos} se presenta el estudio realizado, a través de simulaciones Monte Carlo, del estimador propuesto. Se muestran los resultados obtenidos de estas simulaciones  con datos contaminados y sin contaminar, y la aplicación de estos métodos en imágenes reales.
 	\item En el capítulo~\ref{ResultadosTeoricos} se presenta resultados de convergencia del estimador propuesto.
