--- a/Source/CorreccionTesis/capitulo3.tex
+++ b/Source/CorreccionTesis/capitulo3.tex
@@ -8,14 +8,18 @@
 \label{Radar}
 
 Los sistemas de Radar (detección y medición de distancias por radio) son instrumentos que, a través de ondas electromagnéticas, detectan un objeto e indican su distancia y posición. 
-Estos instrumentos miden la respuesta del blanco a la radiación electromagnética emitida en forma de pulsos, el valor de esta respuesta es almacenada para su posterior procesamiento y se utiliza para formar una imagen de la zona de interés. A diferencia de los sensores ópticos e infrarrojos que son inherentemente pasivos, el radar es un sensor activo, proporciona su propia iluminación en forma de microondas. Las microondas son ondas electromagnéticas (EM) que se encuentran en aproximadamente la zona de $1$ a $300$ GHz del EM, es decir, longitudes de onda entre $1$ centímetros a $1$ milímetro.
+Estos instrumentos miden la respuesta del blanco a la radiación electromagnética emitida en forma de pulsos, el valor de esta respuesta es almacenado para su posterior procesamiento y se utiliza para formar una imagen de la zona de interés. 
+
+%%% ACF Usar las funciones de la librería "siunitx" para todo lo que sea unidades
+A diferencia de los sensores ópticos e infrarrojos que son inherentemente pasivos, el radar es un sensor activo, proporciona su propia iluminación en forma de microondas. Las microondas son ondas electromagnéticas (EM) que se encuentran en aproximadamente la zona de $1$ a $300$ GHz del EM, es decir, longitudes de onda entre $1$ centímetro a $1$ milímetro.
 
 Muchos de los radares montados sobre plataformas móviles son de vista lateral (SLAR: \textit{Side Looking Airbone Radar}), dentro de éstos podemos encontrar los radares de apertura real (RAR: \textit{Real Aperture Radar}) y los radares de
 apertura sintética SAR. 
 
 ¿Por qué vista lateral? Porque los retornos porvenientes de distintos puntos del terreno llegarán en tiempos diferentes, ya que difieren en su distancia al radar. En cambio, en los radares de vista vertical, se pueden recibir señales provenientes de puntos equidistantes. Esto llevaría a ambigüedades ya que el tiempo de arribo de la señal sería el mismo para este tipo de sensores.
 
-¿Por qué SAR y no RAR? La resolución en la dirección del desplazamiento $(\Delta x)$ es la mínima distancia que tienen que tener dos puntos diferentes en el terreno para que el sensor sea capaz de distinguirlos. Los sensores RAR tienen un baja resolución espacial, ésta se define como  $\Delta x\approx\dfrac{\lambda \cdot r}{l}$ como se indica en \citet{Sarmap2009}, donde $\lambda$ es la longitud de onda  de la señal emitida, $r$ la altura entre el sensor y el terreno y $l$ la longitud de la antena. Esto se muestra en la figura~\ref{Resolucion}.
+¿Por qué SAR y no RAR? La resolución en la dirección del desplazamiento $(\Delta x)$ es la mínima distancia que tienen que tener dos puntos diferentes en el terreno para que el sensor sea capaz de distinguirlos. Los sensores RAR tienen un baja resolución espacial, ésta se define como  $\Delta x\approx\dfrac{\lambda \cdot r}{l}$ como se indica en \citet{Sarmap2009}, donde $\lambda$ es la longitud de onda  de la señal emitida, $r$ la altura entre el sensor y el terreno y $l$ la longitud de la antena. 
+Esto se ilustra en la figura~\ref{Resolucion}.
 
 \begin{figure}[hbt]
 	\centering    
@@ -23,24 +27,25 @@ apertura sintética SAR.
 	\caption{\label{Resolucion}Resolución de un radar.}
 \end{figure} 
 
-De esta manera para disminuir el valor de $\Delta x$, es decir, aumentar la resolución es necesario disminuir $r$, $\lambda$ o aumentar $L$. Los sensores ópticos son los que emiten radiación electromagnética con una longitud de onda menor a la correspondiente a microondas. La ventaja de esto es aumentar la resolución a expensas de las condiciones climáticas entre otros factores.
+De esta manera para disminuir el valor de $\Delta x$, es decir, aumentar la resolución es necesario disminuir $r$, $\lambda$ o aumentar $l$. 
+Los sensores ópticos emiten radiación electromagnética con una longitud de onda menor a la correspondiente a microondas. 
+La ventaja de esto es aumentar la resolución a expensas de las condiciones climáticas entre otros factores.
 
-La tecnología SAR permite simular una antena más larga aprovechando que estos sensores son aerotransportados. Cuando un blanco se mueve con respecto a la fuente de emisión de ondas se observa un desplazamiento en frecuencia entre la señal emitida y la recibida. Esta diferencia en frecuencia se conoce como efecto Doppler y afecta la frecuencia observada cuando hay un movimiento relativo entre el objeto y el sensor. La teconología SAR hace uso del efecto Doppler para generar una apertura virtual más grande que la real, por eso se llama de apertura sintética.
+La tecnología SAR permite simular una antena más larga aprovechando que estos sensores son móviles. 
+Cuando un blanco se mueve con respecto a la fuente de emisión de ondas se observa un desplazamiento en frecuencia entre la señal emitida y la recibida. Esta diferencia en frecuencia se conoce como efecto Doppler y afecta la frecuencia observada cuando hay un movimiento relativo entre el objeto y el sensor. La teconología SAR hace uso del efecto Doppler para generar una apertura virtual más grande que la real, por eso se llama de apertura sintética.
 
 Este tipo de imágenes son de gran utilidad ya que permiten obtener información sobre recursos naturales, como así también, permiten detectar efectos de la acción del hombre tales como deforestación, cultivos y embalses. Además presentan ventajas y desventajas sobre las imágenes obtenidas por sensores ópticos, entre las que se encuentran 
-
-\medskip
-
-Ventajas:
+\begin{description}
+\item[Ventajas:]\mbox{}
 \begin{itemize}
 	\item El radar posee un sistema de iluminación propio que permite la adquisición de imágenes tanto de día como de noche.
 	\item Los sistemas SAR emiten radiación electromagnética a frecuencias que permiten atravesar las nubes sin pérdida en la calidad de la imagen obtenida, como así también atravesar zonas de forestación obteniendo mayor información de la zona bajo estudio.
 \end{itemize}
-
-Desventajas: 
+\item[Desventajas:]\mbox{}
 \begin{itemize}
 	\item Las imágenes SAR tienen la desventaja de poseer un ruido que es inherente al proceso de captura de la imagen, ya que el tipo de iliminación que se utiliza para formar la misma es de tipo coherente como se indica en \citet{goodman85}. Este ruido, llamado speckle, es multiplicativo, no gaussiano y, por lo tanto, diferente al ruido que se observa en imágenes ópticas. La presencia de este ruido hace que en este tipo de imágenes se observen, en algunos casos, un granulado o falta de contraste.
 \end{itemize}
+\end{description}
 %Entonces debido a la gran velocidad de desplazamiento de la plataforma que transporta al sensor, la antena del dispositivo SAR se convierte en una antena virtual mucho más grande que la que tiene en realidad, por eso se llaman de apertura sintética.
 
 En este capítulo presentamos una breve descripción del funcionamiento de un radar de apertura sintética y de la forma en que se adquieren este tipo de imágenes, ya que éstas son el objeto de estudio en esta tesis.
@@ -91,23 +96,30 @@ Antes del desarrollo de las imágenes de radar, las imágenes de alta resolució
 
 Los sensores SAR poseen una tecnología diferente para obtener información de la superficie terrestre. Estos sensores son activos, es decir, poseen un sistema de iluminación propia que les permite obtener imágenes en forma independiente de la luz solar. Esto aumenta la capacidad de obtener imágenes ya que pueden operar en forma continua durante el día y la noche.
 
-Dado que estos sistemas emiten puslos en el espectro de las microondas, ni las nubes, ni la niebla, ni las precipitaciones impiden la adquisición de imágenes. Esto hace que los sensores SAR puedan operar en forma independiente de las condiciones climáticas. Por lo tanto estos instrumentos son capaces de obtener información de la tierra en forma continua lo que permite observar fenómenos como corrientes oceánicas, detectar cambios en la vegetación o moviemientos del hielo.
+Dado que estos sistemas emiten pulsos en el espectro de las microondas, ni las nubes, ni la niebla, ni las precipitaciones impiden la adquisición de imágenes. Esto hace que los sensores SAR puedan operar en forma independiente de las condiciones climáticas. Por lo tanto estos instrumentos son capaces de obtener información de la tierra en forma continua lo que permite observar fenómenos como corrientes oceánicas, detectar cambios en la vegetación o moviemientos del hielo.
 
 %Como se indica en~\cite{Maitre2010} los primeros experimentos de detección de aeronaves datan de 1934. Esto explica por qué tanto los británicos como estadounidenses y alemanes  tales sistemas durante la 2ª Guerra Mundial. 
 
 \citet{Moreira2013} señalan que, durante los años $50$ y $60$ la investigación militar utilizó ampliamente los sistemas SAR con el propósito del reconocimiento del terreno. Sin embargo, a partir de los años $70$ y $80$ se desarrollaron varios sensores SAR aerotransportados  para aplicaciones civiles con el objetivo final de recuperar parámetros geo/biofísicos y detectar cambios en la superficie terrestre.
 
+%%% ACF Arreglar esta entrada bibliográfica para que aparezca bien en la cita.
 \citet{Seasat} indica que el primer satélite civil que tuvo a bordo un radar SAR fue lanzado en $1978$ a fines de junio por el Jet Propulsion Laboratory (JPL) de la NASA. Este satélite fue diseñado para teledetección de los océanos de la tierra, registrando información de los vientos de la superficie marina y la temperatura, altura de las olas, características hielo marino entre otros parámetros de interés. Debido a un problema eléctrico, este satélite finalizó sus operaciones a mediados de octubre del mismo año.
 
+%%% ACF Tenés que arreglar este párrafo. La idea no era cambiar todo por \citet, sino usar bien las opciones de cita que el estilo te da. Tal como está, no se entiende.
+La Comisión Nacional de Actividades Espaciales (CONAE) y el INVAP de Argentina, junto con la Agencia Espacial Italiana (ASI) integran el Sistema Ítalo Argentino de Satélites para la Gestión de Emergencias (SIASGE) \citet{Invap}. 
+De acuerdo a \citet{Saocom} el objetivo de la misión SAOCOM es la puesta en órbita de dos constelaciones: SAOCOM1 y SAOCOM2. Cada constelación se compone de dos satélites llamados A y B. El satélite SAOCOM1A fue puesto en órbita el 7 de octubre de 2018 en Vanderberg, California. En \citet{Saocom} se puede ver un video de su lanzamiento.
 
-La Comisión Nacional de Actividades Espaciales (CONAE) y el INVAP de Argentina, junto con la Agencia Espacial Italiana (ASI) integran el Sistema Ítalo Argentino de Satélites para la Gestión de Emergencias (SIASGE) \citet{Invap}. De acuerdo a \citet{Saocom} el objetivo de la misión SAOCOM es la puesta en órbita de dos constelaciones: SAOCOM1 y SAOCOM2. Cada constelación se compone de dos satélites llamados A y B. El satélite SAOCOM1A fue puesto en órbita el 7 de octubre de 2018 en Vanderberg, California. En \citet{Saocom} se puede ver un video de su lanzamiento.
-
+%%% ACF Usar siunitx
 Entre los objetivos de estos satélites se encuentra la medición de la humedad del suelo, detectar derrames de hidrocarburos en el mar y el seguimiento de la cobertura de agua en las inundaciones. Están equipados con tecnología SAR polarimétrica y operan en banda L. La banda L permite penetrar a través de la superficie hasta $2$ m de profundidad dependiendo del tipo de suelo. 
 
 En la tabla~\ref{tabla:SensoresSAR}, y de acuerdo a la información obtenida de \citet{Moreira2013}, se muestran los principales sensores SAR junto con el período, banda y frecuencia de operación y las instituciones/países que lo desarrollaron. 
 
+%%% ACF Poner los países en castellano
+%%% ACF Fijate bien si estás informando el sensor, o el sensor y la plataforma
+%%% ACF En el texto que precede esta tabla, decí que vas a explicar "polarización" más adelante, y que las bandas están detalladas en la tabla ??
 \begin{table}[H]
 	\centering
+	\small
 	\begin{spacing}{1.25}
 		\begin{tabular}{l*4{l}}
 			\toprule
@@ -116,39 +128,39 @@ En la tabla~\ref{tabla:SensoresSAR}, y de acuerdo a la información obtenida de 
 			\midrule
 			Seasat	                        &	1978	            				&	L (HH)	                		 &	NASA/JPL, USA \\
 			ERS -1/2	                    &	1991–2000/1995–2011					&	C (VV)	                		 &	ESA, Europe \\
-			J-ERS -1	                    &	1992–1998	        				&	L (HH)	                		 &	JAXA, Japan \\
+			J-ERS-1	                    &	1992–1998	        				&	L (HH)	                		 &	JAXA, Japan \\
 			Radarsat-1   	                &	1995-2013   	    				&	C (HH)	                 		 &	CSA, Canada \\
 			\multirow{2 }{*} {SRTM}	        &	\multirow{2 }{*} {Lanzado en 2000}  &	C (HH+VV) 				         &	NASA/JPL, USA, DLR,  \\
 			&                       				&   y X (VV)                   		 &   Germany, ASI, Italy\\
-			ENVISAT / ASAR	                &	2002–2012   	    				&	C (dual)	                		 &	ESA, Europe \\
-			ALOS /PalSAR	                &	2006–2011   	   					&	L (quad)	             		 &	JAXA, Japan \\
-			TerraSAR -X/	                &	Lanzado en 2007	  				    &	\multirow{2 }{*} {X (quad)}	     &	\multirow{2 }{*} {SDLR/Astrium,Germany} \\
-			TanDEM -X	                    &	Lanzado en 2010   				 	&	            			         &	             \\
+			ENVISAT/ASAR	                &	2002–2012   	    				&	C (dual)	                		 &	ESA, Europe \\
+			ALOS/PalSAR	                &	2006–2011   	   					&	L (quad)	             		 &	JAXA, Japan \\
+			TerraSAR-X/	                &	Lanzado en 2007	  				    &	\multirow{2 }{*} {X (quad)}	     &	\multirow{2 }{*} {SDLR/Astrium, Germany} \\
+			TanDEM-X	                    &	Lanzado en 2010   				 	&	            			         &	             \\
 			Radarsat-2	                    &	Lanzado en 2007    					&	C (quad)            		     &  CSA, Canada	 \\
-			COSMO -SkyMed-1/4	            &	Lanzado en 2007	    				&	X (dual)          			     &	ASI/MiD, Italy \\
-			RISAT -1	                    &	Lanzado en 2012   				 	&	C (quad)            			 &	ISRO, India \\
+			COSMO-SkyMed-1/4	            &	Lanzado en 2007	    				&	X (dual)          			     &	ASI/MiD, Italy \\
+			RISAT-1	                    &	Lanzado en 2012   				 	&	C (quad)            			 &	ISRO, India \\
 			\multirow{2 }{*} {HJ-1C	}       &	\multirow{2 }{*} {Lanzado en 2012} 	&	\multirow{2 }{*} {S (VV)}		 &	CRESDA/CAST / \\
 			&                       				&                             		 &  NRSCC, China                   \\
 			Kompsat-5	                    &	Lanzado en 2013	  				    &	X (dual)            			 &	KARI, Korea \\
 			PAZ	                            &	Lanzado en 2018   				 	&	X (quad)            		     &	CDTI, Spain \\
 			ALOS -2	                        &	Lanzado en 2014	 				    &	L (quad)            		     &	JAXA, Japan \\
-			Sentinel-1a/1b              	&	Lanzado en 2014    				    &	C (dual)            			 &	ESA , Europe \\
+			Sentinel-1a/1b              	&	Lanzado en 2014    				    &	C (dual)            			 &	ESA, Europe \\
 			Radarsat 	                    &	\multirow{2 }{*} {Lanzado en 2019}  &	\multirow{2 }{*} {C (quad) }     &	\multirow{2 }{*} {CSA, Canada }\\
 			Constellation-1/2/3             &                   			        &   			          			 &                     \\
-			SAOCOM -1/2	                    &	Lanzado en 2018  					&	L (quad)	           			 &	CONAE, Argentina \\
+			SAOCOM-1/2	                    &	Lanzado en 2018  					&	L (quad)	           			 &	CONAE, Argentina \\
 			\bottomrule
 		\end{tabular}
 	\end{spacing}
-	\caption{\label{tabla:SensoresSAR}Descripción de algunos sensores SAR junto con sus características. Adaptado de \citet{Moreira2013}.}
+	\caption{Descripción de algunos sensores SAR junto con sus características. Adaptado de \citet{Moreira2013}.}\label{tabla:SensoresSAR}
 \end{table}
 
 \section{Sistema de iluminación coherente}
 \label{coherente}
 
-
+%%% ACF Usar siunitx
 Un haz de luz esta formado por ondas electromagnéticas cuya longitud de onda está comeprendida entre $400$ y $800$ nanómetros.
 
-La superposición de dos o más ondas producen diferentes tipo de sistemas de iluminación, esto se muestra la figura~\ref{LuzCoherente}.
+La superposición de dos o más ondas produce diferentes tipo de sistemas de iluminación, esto se muestra la figura~\ref{LuzCoherente}.
 
 \begin{figure}[hbt]
 	\centering    
@@ -172,6 +184,7 @@ Las ondas electromagnéticas se modelan con una sinusoidal donde la longitud de 
 %	\caption{\label{LongOnda}Parámetros de una señal.}
 %\end{figure} 
 
+%%% ACF "Radar SAR" es redundante. Revisar todo, y dejar sólo SAR.
 Como dijimos anteriormente el radar SAR emite señales en la región de microondas del espectro electromagnético (EM) y en diferentes bandas. La figura~\ref{Espectro} muestra cómo está formado el EM de acuerdo a la longitud de onda de la señal.
 
 \begin{figure}[hbt]
@@ -182,16 +195,17 @@ Como dijimos anteriormente el radar SAR emite señales en la región de microond
 
 Las microondas, que son parte del espectro electromagnético, tienen longitudes de onda considerablemente más grande que la luz visible. Un aspecto a tener en cuenta al momento de elegir una longitud de onda es la penetración. Cuanto más grande es la longitud de onda (frecuencias más chicas), más fuerte es la penetración en la vegetación y el suelo. La tabla~\ref{Bandas} se presentan las bandas más usadas en teledetección por microondas.
 
+%%% ACF Usar bien los comandos de siuntix, por favor leé la documentación hasta el final
 \begin{table}[H]
 	\centering
 	\begin{tabular}{ccc}
 		\toprule
 		\textbf{Banda}	& \textbf{Frecuencia}		    	& \textbf{Longitud de onda} \\ \midrule
-		X-band			& 12.5 a 8 \si{\giga\hertz}         &  2.4 a 3.75 \si{\centi\meter} \\
-		C-band			&  8 a 4 \si{\giga\hertz} 			&  3.75 a 7.5 \si{\centi\meter}\\
-		S-band			&  4 a 2 \si{\giga\hertz} 	        &  7.5 a 15 \si{\centi\meter} \\
-		L-band			&  2 a 1 \si{\giga\hertz} 	        &  15 a 30 \si{\centi\meter} \\
-		P-band			&  0.999 a 0.2998 \si{\giga\hertz} 	&  30 a 100 \si{\centi\meter} \\
+		X			& 12.5 a 8 \si{\giga\hertz}         &  2.4 a 3.75 \si{\centi\meter} \\
+		C			&  8 a 4 \si{\giga\hertz} 			&  3.75 a 7.5 \si{\centi\meter}\\
+		S			&  4 a 2 \si{\giga\hertz} 	        &  7.5 a 15 \si{\centi\meter} \\
+		L			&  2 a 1 \si{\giga\hertz} 	        &  15 a 30 \si{\centi\meter} \\
+		P			&  0.999 a 0.2998 \si{\giga\hertz} 	&  30 a 100 \si{\centi\meter} \\
 		\bottomrule
 	\end{tabular}
 	\caption{\label{Bandas}Bandas SAR, datos adaptados de \citet{Sarmap2009}}
@@ -200,18 +214,24 @@ Las microondas, que son parte del espectro electromagnético, tienen longitudes 
 Cada banda es utilizada en diferente tipos de aplicaciones:
 
 \begin{description}
-\item[X-band:] se utiliza para tener imágenes de alta resolución.
-\item[C-band:] atraviesa las nubes y la lluvia.
-\item[S-band:] útil para medir niveles de precipitación.
-\item[L-band:] útil para aplicaciones en agricultura y mediciones de humedad del suelo.
-\item[P-band:] adecuada para  imágenes con importante penetración en la vegetación.
+\item[X:] se utiliza para tener imágenes de alta resolución.
+\item[C:] atraviesa las nubes y la lluvia.
+\item[S:] útil para medir niveles de precipitación.
+\item[L:] útil para aplicaciones en agricultura y mediciones de humedad del suelo.
+\item[P:] adecuada para  imágenes con importante penetración en la vegetación.
 \end{description}
 
 %La energía en el espectro de las microondas es útil en teledetección porque es capaz de atravesar la atmósfera bajo prácticamente todas las condiciones climáticas (niebla, lluvia, nieve, nubes). 
 
 \section{Polarización}
 
-Las ondas electromagnéticas son ondas transversales, es decir, la dirección del vector campo eléctrico $\vec{\mathbf{E}}$ es perpendicular a la dirección de propagación de la onda. Un aspecto a tener en cuenta es la polarización de una onda electromagnética, que se define como la orientación del vector campo eléctrico $\vec{\mathbf{E}}$ de la radiación transmitida o recibida. La luz correspondiente al espectro visible por lo general no está polarizada, todas las direcciones de $\vec{\mathbf{E}}$ son igualmente probables en el plano perpendicular a la dirección de propagación de la onda. Si la señal se descompone en dos ondas de igual amplitud pero con una diferencia de fase de $90º$, entonces se dice que la luz está polarizada circularmente porque $\vec{\mathbf{E}}$ gira describiendo un círculo en el plano ortogonal a la dirección de propagación, a medida que la señal avanza. Si las dos ondas tienen diferente amplitud y están desfasadas entre sí $90º$, o si el desfasaje es distinto de $90º$, la luz se dice que está polarizada elípticamente. Cuando el vector $\vec{\mathbf{E}}$ se mantiene paralelo a una dirección fija la polarización se llama lineal. La figura~\ref{PolarizacionCircularLineal} muestra luz  circular o linealmente polarizada.
+Las ondas electromagnéticas son ondas transversales, es decir, la dirección del vector campo eléctrico $\vec{\mathbf{E}}$ es perpendicular a la dirección de propagación de la onda. 
+Un aspecto a tener en cuenta es la polarización de una onda electromagnética, que se define como la orientación del vector campo eléctrico $\vec{\mathbf{E}}$ de la radiación transmitida o recibida. 
+
+La luz correspondiente al espectro visible por lo general no está polarizada, todas las direcciones de $\vec{\mathbf{E}}$ son igualmente probables en el plano perpendicular a la dirección de propagación de la onda. 
+
+%%% ACF Cambiar "luz" por radiación electromagnética donde corresponda
+Si la señal se descompone en dos ondas de igual amplitud pero con una diferencia de fase de $90º$, entonces se dice que la luz está polarizada circularmente porque $\vec{\mathbf{E}}$ gira describiendo un círculo en el plano ortogonal a la dirección de propagación, a medida que la señal avanza. Si las dos ondas tienen diferente amplitud y están desfasadas entre sí $90º$, o si el desfasaje es distinto de $90º$, la luz se dice que está polarizada elípticamente. Cuando el vector $\vec{\mathbf{E}}$ se mantiene paralelo a una dirección fija la polarización se llama lineal. La figura~\ref{PolarizacionCircularLineal} muestra luz  circular o linealmente polarizada.
  %se puede ver en la figura~\ref{PolarizacionCircularEliptica} 
 
 \begin{figure}[hbt]
@@ -233,13 +253,34 @@ La antena del radar puede recibir radiación polarizada vertical u horizontalmen
 
 En el caso donde la polarización de la radiación recibida coincide con la polarizacion de la radiación transmitida, se conoce como imagen polarizada de manera similar. En cambio, cuando la polarización de la radiación recibida es ortogonal a la polarización de la radiación transmitida, se dice que la polarización es cruzada.  
 
-Los sistemas SAR monopolarizados operan con una única polarización de emisión y detecta una sola de las componentes de la radiación recibida. Generalmente usan polarización similar, es decir igual polarización al emitir y recibir,  porque las señales de polarización cruzada son demasiado débiles para producir una buena imagen. De esta forma podemos tener radares monopolares o monopolarimétricos HH, VV, HV o VH donde la primera letra indica la polarización de la radiación emitida y la segunda indica la componente de la radiación detectada. Los primeros sensores SAR, como por ejemplo,  RADARSAT-1, que ha sido sustituido por RADARSAT-2, adquieren imágenes únicamente en la banda C y en la combinación HH. 
+Los sistemas SAR monopolarizados operan con una única polarización de emisión y detectan una sola de las componentes de la radiación recibida. 
+Generalmente usan polarización similar, es decir igual polarización al emitir y recibir,  porque las señales de polarización cruzada son demasiado débiles para producir una buena imagen. 
+De esta forma podemos tener radares monopolares o monopolarimétricos HH, VV, HV o VH donde la primera letra indica la polarización de la radiación emitida y la segunda indica la componente de la radiación detectada. 
+Los primeros sensores SAR, como por ejemplo,  RADARSAT-1, que ha sido sustituido por RADARSAT-2, adquieren imágenes únicamente en la banda C y en la combinación HH. 
 
-Si un radar tiene la capacidad de captar distintas polarizaciones se lo identificará como polarimétrico. En este tipo de radares se emite una señal electromagnética con polarización horizontal y vertical y se detectan ambas polarizaciones en la radiación recibida. Es decir, operan en las cuatro combinaciones citadas al mismo tiempo generando, en principio, imágenes de cuatro bandas. En esta tesis trabajaremos con imágenes monopolarimétricas.
+Si un radar tiene la capacidad de captar distintas polarizaciones se lo identificará como polarimétrico. 
+En este tipo de radares se emite una señal electromagnética con polarización horizontal y vertical y se detectan ambas polarizaciones en la radiación recibida. 
+Es decir, operan en las cuatro combinaciones citadas al mismo tiempo generando, en principio, imágenes de cuatro bandas. 
+En esta tesis trabajaremos con imágenes monopolarimétricas.
 
 \section{Geometría SAR}
 
-El radar de apertura sintética SAR  es un sensor activo, de vista lateral, que emite energía en un período corto de tiempo y en el  intervalo  de  frecuencias  de  microondas recibiendo la señal reflejada por el blanco iluminado. Está montado sobre una plataforma móvil (aeronave o satélite) que transmite y recibe las señales con la misma antena, la cual tiene su eje longitudinal paralelo a la trayectoria de vuelo. Debido a la gran velocidad del desplazamiento de la plataforma y aprovechando el efecto Doppler que tiene lugar como consecuencia de dicho desplazamiento, la antena del dispositivo SAR  se convierte en una antena virtual de mayor tamaño. 
+El radar de apertura sintética SAR es un sensor activo, de vista lateral, que emite energía en un período corto de tiempo y en el  intervalo  de  frecuencias  de  microondas recibiendo la señal reflejada por el blanco iluminado. 
+%%% ACF Mencionar también el GBSAR
+%
+%@Article{AReviewofGroundBasedSARInterferometryforDeformationMeasurement,
+%	author    = {O. Monserrat and M. Crosetto and G. Luzi},
+%	journal   = {{ISPRS} Journal of Photogrammetry and Remote Sensing},
+%	title     = {A review of ground-based {SAR} interferometry for deformation measurement},
+%	year      = {2014},
+%	month     = {jul},
+%	pages     = {40--48},
+%	volume    = {93},
+%	doi       = {10.1016/j.isprsjprs.2014.04.001},
+%	publisher = {Elsevier {BV}},
+%}
+Está montado sobre una plataforma móvil (aeronave o satélite) que transmite y recibe las señales con la misma antena, la cual tiene su eje longitudinal paralelo a la trayectoria de vuelo. 
+Debido a la gran velocidad del desplazamiento de la plataforma y aprovechando el efecto Doppler que tiene lugar como consecuencia de dicho desplazamiento, la antena del dispositivo SAR  se convierte en una antena virtual de mayor tamaño. 
 
 El radar se desplaza a una velocidad $\vec{v}$ y a una altura $h$ portando una antena que emite radiación electromagnética e ilumina la superficie del terreno. En la figura~\ref{GeometriaSAR} se muestra un esquema del movimiento del radar, la región sombreada es la zona iluminada por el radar. Esta zona permanece en el haz de la antena durante unos instantes y es observado por el radar desde numerosos puntos a lo largo de la trayectoria de la plataforma.
 %, lo que es equivalente a prolongar la longitud real de la antena.
@@ -262,6 +303,7 @@ Vamos a dar algunas definiciones sobre la geometría SAR:
 \end{figure} 
 
 La antena del radar tiene su eje longitudinal paralelo a la trayectoria de vuelo y emite pulsos de energía electromagnética perpendicular a dicha trayectoria, como se ilustra en la figura~\ref{GeometriaSAR}. Los pulsos electromagnéticos iluminan un área en el terreno, la antena recibe la energía reflejada en diferentes momentos, dependiendo de la distancia que existe entre el objeto y la antena. Con  el procesamiento de la señal reflejada se genera la imagen. 
+
 A medida que el radar se desplaza emite pulsos de radiación electromagnética y recibe la señal correspondiente a la energía reflejada (retrodispersada)  por la superficie sensada. En el momento en el que este pulso incide sobre el blanco la radiación emitida sufre un proceso de dispersión como se muestra en la figura~\ref{SeñalDispersada} dependiendo del tipo de textura que tiene el blanco iluminado. 
 
 \begin{figure}[H]
@@ -301,16 +343,16 @@ Esta idea de generar una apertura sintética llevó a mejorar la resolución en 
 
 La ecuación del radar representa la relación que exite entre la energía transmitida y la energía recibida por la antena del radar. Esta relación se define como
 \begin{align}
-P_r=\dfrac{P_e G^2 \lambda^2 \sigma}{(4 \pi)^3 R^4} 
+P_r=\dfrac{P_e G^2 \lambda^2 \sigma}{(4 \pi)^3 R^4} ,
 \end{align}
 donde
 \begin{itemize}
-	\item $P_r$=potencia recibida.
-	\item $P_e$=potencia emitida.
-	\item $G$=ganancia de la antena (constante adimensional que indica la relación que existe entre la potencia radiada en una dirección y a una distancia, y la  potencia que radiaría una antena isotrópica con la misma potencia emitida y a la misma distancia. Una antena isotrópica es una antena ideal que emite la misma intensidad de radiación en todas las direcciones del espacio.
-	\item $\lambda$=longitud de onda de la señal.
-	\item $R$=distancia entre el sensor y el terreno.
-	\item $\sigma$= coeficiente de retrodispersión.
+	\item $P_r$ es la potencia recibida,
+	\item $P_e$ es la potencia emitida,
+	\item $G$ es la ganancia de la antena (constante adimensional que indica la relación que existe entre la potencia radiada en una dirección y a una distancia, y la  potencia que radiaría una antena isotrópica con la misma potencia emitida y a la misma distancia. Una antena isotrópica es una antena ideal que emite la misma intensidad de radiación en todas las direcciones del espacio,
+	\item $\lambda$ es la longitud de onda de la señal,
+	\item $R$ es la distancia entre el sensor y el terreno, y
+	\item $\sigma$ es el coeficiente de retrodispersión.
 \end{itemize}
 
 Entre los parámetros que intervienen en la ecuación del radar se encuentra el coeficiente de retrodispersión $\sigma$. Este parámetro es de interés porque su valor depende de la textura del terreno el cual influye en la intensidad de la señal del retorno.
@@ -318,7 +360,9 @@ Entre los parámetros que intervienen en la ecuación del radar se encuentra el 
 \section{Formación del ruido Speckle}
 \label{FormacionSpeckle}
 
-El láser HeNe es un tipo de fuente que utiliza como medio activo una mezcla gaseosa de helio y neón. De acuerdo a \citet{Goodman1975,Quel1994} Ali Javan, un físico que trabajaba para Laboratorios Bell Telephone, fue el responsable del funcionamiento del primer láser HeNe en $1960$. Este láser  mostró un fenómeno inesperado: los objetos vistos en luz altamente coherente adquieren una apariencia granular peculiar que no tiene una relación obvia con las propiedades macroscópicas del objeto iluminado, sino que presentan un patrón irregular. 
+El láser HeNe es un tipo de fuente de iluminación que utiliza como medio activo una mezcla gaseosa de helio y neón. 
+De acuerdo a \citet{Goodman1975}, fue Ali Javan, un físico que trabajaba para Laboratorios Bell Telephone, el responsable del funcionamiento del primer láser HeNe en $1960$. 
+Este láser  mostró un fenómeno inesperado: los objetos vistos en luz altamente coherente adquieren una apariencia granular peculiar que no tiene una relación obvia con las propiedades macroscópicas del objeto iluminado, sino que presentan un patrón irregular. 
 
 Esta apariencia granular se conoce como ruido speckle. Las imágenes adquiridas por sistemas de iluminación coherente como son las imágenes SAR, las que utilizan laser o ultrasonido entre otros, se ven afectadas por la presencia del ruido speckle. Este tipo de ruido es inherente al proceso de captura de la imagen, no es aditivo ni gaussiano y suele dificultar el análisis e interpretación de las imágenes porque pueden degradarlas significativamente.
 
@@ -349,7 +393,9 @@ En el momento de la reflexión, la señal que retorna ya no es coherentes en fas
 	\caption{\label{Reflexion}Coherencia de la señal reflejada.} %Fuente Canada Centre for Remote Sensing \citet{ccrs2001}.}
 \end{figure} 
 
-Entonces, las ondas electromagnéticas que provienen de la misma celda de resolución se suman de manera coherente y dan como resultado fuertes fluctuaciones en la retrodispersión de una celda de resolución a otra, como se inica en \citet{oliverquegan98}. De acuerdo a \citet{Shahrezaei2019} el valor de gris en un pixel se obtiene como superposición coherente de las señales incidentes que, al estar desfasadas, pueden interferir de manera constructiva o destructiva, lo que produce que las señales recibidas sean más fuertes o más débiles. Estas interferencias causan variaciones en la magnitud de la señal y cambios aleatorios de intensidad de píxel a píxel. Estos cambios en la intensidad se traducen en la imagen como diferentes niveles de gris. Esto explica el patrón granular que se observa en las imágenes SAR y que produce negros, correspondientes a interferencias destructivas, y puntos brillantes debido a las constructivas, como se indica en \citet{Yahya2014}. Este patrón granular es lo que se conoce como \textit{Ruido Speckle}.
+Entonces, las ondas electromagnéticas que provienen de la misma celda de resolución se suman de manera coherente y dan como resultado fuertes fluctuaciones en la retrodispersión de una celda de resolución a otra, como se inica en \citet{oliverquegan98}. 
+
+De acuerdo a \citet{Shahrezaei2019} el valor de gris en un pixel se obtiene como superposición coherente de las señales incidentes que, al estar desfasadas, pueden interferir de manera constructiva o destructiva, lo que produce que las señales recibidas sean más fuertes o más débiles. Estas interferencias causan variaciones en la magnitud de la señal y cambios aleatorios de intensidad de píxel a píxel. Estos cambios en la intensidad se traducen en la imagen como diferentes niveles de gris. Esto explica el patrón granular que se observa en las imágenes SAR y que produce negros, correspondientes a interferencias destructivas, y puntos brillantes debido a las constructivas, como se indica en \citet{Yahya2014}. Este patrón granular es lo que se conoce como \textit{Ruido Speckle}.
 
 La presencia de este ruido dificulta la interpretación de las imágenes y puede conducir a interpretaciones y detecciones de bordes erróneas entre otros inconvenientes, debido a la degradación de la calidad de los píxeles. 
 
@@ -357,7 +403,9 @@ De acuerdo a \citet{Lee2009}, un enfoque común para reducir la presencia de est
 
 \section{Doble Bounce o Doble Rebote}
 \label{SecDobleBounce}
-El efecto Doble Rebote es una característica importante que tienen las  imágenes de alta resolución como lo son las imágenes SAR. Este efecto resulta en un fuerte mecanismo de dispersión de la señal emitida por el radar. Aparece por ejemplo, cuando la señal emitida rebota en la calle, luego en los edificios (llamado un doble rebote) como se ve en la figura~\ref{DobleRebote}, o cuando rebota en un edificio y en sus alrededores (corner reflector).  Este efecto se observa en las imágenes SAR como puntos muy brillantes, en cambio, las autopistas aparecen oscuras al ser superficies planas. En la figura~\ref{DobleBounce} se puede ver un esquema de diferentes reflexiones de una señal emitida por el radar.
+El efecto Doble Rebote es una característica importante que tienen las  imágenes de alta resolución como lo son las imágenes SAR. 
+Este efecto resulta en un mecanismo de fuerte dispersión de la señal emitida por el radar. 
+Aparece por ejemplo, cuando la señal emitida rebota en la calle, luego en los edificios (llamado un doble rebote) como se ve en la figura~\ref{DobleRebote}, o cuando rebota en un edificio y en sus alrededores (corner reflector).  Este efecto se observa en las imágenes SAR como puntos muy brillantes, en cambio, las autopistas aparecen oscuras al ser superficies planas. En la figura~\ref{DobleBounce} se puede ver un esquema de diferentes reflexiones de una señal emitida por el radar.
 \begin{figure}[hbt]
 	\label{Dispersion}
 	\centering    
@@ -378,7 +426,12 @@ S = \sum_{j=1}^{n} A_j \mathrm{e}^{\mathbf i \phi_j} =
 \underbrace{{\sum_{j=1}^{n} A_j \cos \phi_j}}_{\Re{S}} +\mathbf i \underbrace{ \sum_{j=1}^{n} A_j \sin \phi_j}_{\Im{S}}, 
 \label{eq:RetornoComplejo}
 \end{align}
-donde $i$ es la unidad imaginaria y $A_j \mathrm{e}^{\mathbf i \phi_j}$ representa el retorno del $j$-ésimo dispersor. La ecuación~\eqref{eq:RetornoComplejo} describe la suma coherente de las contribuciones del retorno total de cada uno de los dispersores. En general, en vez de tratar directamente con el retorno complejo se trabajan con los datos dados en formato amplitud $A=\mid S \mid$ o  en formato intensidad $I=\mid S \mid^2$, donde $I=A^2$ En esta tesis se trabajará con este último formato.
+%%% ACF Denotaste la unidad imaginaria de otra forma. Corregir y revisar todo
+%%% ACF Aparece "sin", debería ser "sen"
+donde $i$ es la unidad imaginaria y $A_j \mathrm{e}^{\mathbf i \phi_j}$ representa el retorno del $j$-ésimo dispersor. La ecuación~\eqref{eq:RetornoComplejo} describe la suma coherente de las contribuciones del retorno total de cada uno de los dispersores. En general, en vez de tratar directamente con el retorno complejo se trabajan con los datos dados en formato amplitud 
+%%% ACF \mid es para "dado" (probabilidad condicional). Usá los delimitadores que vienen en el paquete "physics".
+$A=\mid S \mid$ 
+o  en formato intensidad $I=\mid S \mid^2$, donde $I=A^2$ En esta tesis se trabajará con este último formato.
 
 De acuerdo a \citet{Quegan1994} si no hay un retrodispersor que domine, la forma de extraer información del retorno de los retrodispersores es aproximándose al problema desde un punto de vista estadístico. Este enfoque se verá en el capítulo~\ref{modeloG0}.
 
